# todo-rust

./: Cargo.toml  README.md  todo.txt
src/: cli.yaml  cmds.rs  lib.rs  main.rs  tests.rs
src/cmds/: add.rs  echo.rs  list.rs
