[package]
name = "todo-rust"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.19"
clap = {version = "2.33.3", features = ["yaml"]}
colored = "2.0.0"
confy = "0.4.0"
regex = "1.5.4"
serde = { version = "1.0", features = ["derive"]}
tabular = "0.1.4"
